# ppg-basis

./: .gitignore  README.md  TODO  base_tb.ipynb  custom_cost_func.ipynb  gamma_pipeline.ipynb  gaussian_pipeline.ipynb  ppg_constants.py  profile_all.py  profile_full_pipeline.py  pyproject.toml  setup.py  skewed_gaussian_pipeline.ipynb  testbench.ipynb  testbench_gamma.ipynb  testbench_gaussian.ipynb  testbench_skewed_gaussian.ipynb  timings_for_graph.ipynb  view_profiles.py
notebooks/: base_tb.ipynb  custom_cost_func.ipynb  timings_for_graph.ipynb
ppg-basis/model/: __init__.py  basis.py
ppg-basis/utils/: __init__.py  generator_utils.py
ppg_basis/: __init__.py  ppg_constants.py  ppg_extractor.py  ppg_generator.py  recover_test.ipynb
ppg_basis/cost/: __init__.py  cost_metrics.py  obj_function.py
ppg_basis/model/: __init__.py  basis.py  model_basis.py  model_fft.py  model_ode.py  model_template.py  solver_utils.py  unified_solver.py
ppg_basis/recover_test_csv/: ext_method_analysis.csv  gen_accuracy_analysis.csv  gen_method_runtime_ratio_analysis.csv
profiling/: testbench_gamma.ipynb  testbench_gaussian.ipynb  testbench_skewed_gaussian.ipynb  view_profiles.py
serial/: serial_black1_1.sqlite3  serial_black1_2.sqlite3  serial_black2_1.sqlite3  serial_black2_2.sqlite3  serial_white1_1.sqlite3  serial_white1_2.sqlite3  serial_white2_1.sqlite3  serial_white2_2.sqlite3
shelved_functionality/: Dockerfile  profile_all_testing.sh  real_data_pipeline_wip.ipynb  requirements.txt  testbenchDifBases.ipynb  testbenchfullpath.ipynb  testbenchfullpath.py
(+32 files in other folders)
